--- a/echo-editor/package.json
+++ b/echo-editor/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/sortablejs": "^1.15.8",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
@@ -24,6 +25,8 @@
 		"@codemirror/theme-one-dark": "^6.1.2",
 		"@svelte-put/shortcut": "^4.1.0",
 		"pyodide": "^0.27.0",
-		"svelte-codemirror-editor": "^1.4.1"
+		"sortablejs": "^1.15.6",
+		"svelte-codemirror-editor": "^1.4.1",
+		"svelte-sortable-items": "^1.0.1"
 	}
 }
