add support for input()

--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -26,6 +26,9 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            # allow shared array web workers
+            add_header Cross-Origin-Opener-Policy same-origin;
+            add_header Cross-Origin-Embedder-Policy require-corp;
         }
     }
 }
