--- a/echo-server/package.json
+++ b/echo-server/package.json
@@ -22,6 +22,7 @@
     "@fastify/jwt": "^9.0.2",
     "@fastify/postgres": "^6.0.1",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/static": "^8.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.3.0",
